--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,10 @@ html {
     box-sizing: border-box;
     font-size: 16px;
     font-family: sans-serif;
-    background-color: tomato;
+  }
+
+  .warning {
+      color: tomato;
   }
 
   *,
